Add WOD wall and color-coded weekly constancy in the feed
Link check-ins to box WODs, expose sticky constancy with training-tag dots (including DESCANSO_ACTIVO) and opaque tooltips, and fix native date mapping for /user/constancy.

Co-authored-by: Cursor <cursoragent@cursor.com>