@@ -3,6 +3,7 @@ package com.trainhub.backend.service;
 import com.trainhub.backend.dto.request.NewCheckinRequest;
 import com.trainhub.backend.dto.request.NewBoxPostRequest;
 import com.trainhub.backend.dto.request.NewPostRequest;
+import com.trainhub.backend.dto.response.BoxWodSummaryResponse;
 import com.trainhub.backend.dto.response.FriendTimeHistoryResponse;
 import com.trainhub.backend.dto.response.PersonalRecordsResponse;
 import com.trainhub.backend.dto.response.PersonalRecordsResponse.RecordEntry;
@@ -12,23 +13,27 @@ import com.trainhub.backend.dto.response.UserTimeHistoryResponse.TimeEntry;
 import com.trainhub.backend.dto.response.WeeklyConstancyResponse;
 import com.trainhub.backend.enums.PostType;
 import com.trainhub.backend.enums.Role;
+import com.trainhub.backend.enums.TrainingTag;
 import com.trainhub.backend.model.Post;
 import com.trainhub.backend.model.User;
 import com.trainhub.backend.repository.PostRepository;
 import com.trainhub.backend.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.sql.Date;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.TemporalAdjusters;
 import java.time.temporal.WeekFields;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -45,9 +50,14 @@ import java.util.stream.Collectors;
 public class PostService {
 
     private static final WeekFields ISO_WEEK = WeekFields.ISO;
-    private static final List<Boolean> EMPTY_WEEK_DAYS = List.of(
-            false, false, false, false, false, false, false
+    private static final List<TrainingTag> EMPTY_WEEK_TAGS = Collections.unmodifiableList(
+            Arrays.asList(new TrainingTag[7])
     );
+
+    /**
+     * Día de actividad con su tipo de entrenamiento (como máximo uno por fecha).
+     */
+    public record ActivityDay(LocalDate date, TrainingTag tag) {}
 
     private final PostRepository postRepository;
     private final UserRepository userRepository;
@@ -137,7 +147,56 @@ public class PostService {
                     .ifPresent(post::setMate);
         }
 
+        if (request.getWodPostId() != null) {
+            Post wod = postRepository.findById(request.getWodPostId())
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "WOD no encontrado"));
+
+            if (wod.getPostType() != PostType.BOX_WOD) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "El post indicado no es un WOD de box");
+            }
+
+            Integer userBoxId = user.getBox() != null ? user.getBox().getId() : null;
+            Integer wodBoxId = wod.getBox() != null ? wod.getBox().getId() : null;
+            if (userBoxId == null || wodBoxId == null || !userBoxId.equals(wodBoxId)) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "El WOD no pertenece al box del usuario");
+            }
+
+            if (postRepository.existsByUserIdAndWodPostId(userId, wod.getId())) {
+                throw new ResponseStatusException(HttpStatus.CONFLICT, "Ya has hecho check-in de este WOD");
+            }
+
+            post.setWodPost(wod);
+        }
+
         return postRepository.save(post);
+    }
+
+    /**
+     * Lista WODs recientes del box del usuario para el selector de check-in.
+     *
+     * @param userId id del usuario autenticado
+     * @return resumen de hasta 10 WODs (más recientes primero); lista vacía sin box
+     */
+    public List<BoxWodSummaryResponse> listRecentBoxWods(Integer userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado: " + userId));
+
+        if (user.getBox() == null) {
+            return List.of();
+        }
+
+        LocalDateTime since = LocalDateTime.of(2000, 1, 1, 0, 0);
+        return postRepository
+                .findRecentBoxWods(user.getBox().getId(), since, PageRequest.of(0, 10))
+                .stream()
+                .map(wod -> new BoxWodSummaryResponse(
+                        wod.getId(),
+                        wod.getTitle(),
+                        wod.getDescription(),
+                        wod.getTrainingTag(),
+                        wod.getCreationDate()
+                ))
+                .collect(Collectors.toList());
     }
 
     /**
@@ -190,7 +249,10 @@ public class PostService {
      * @return racha actual del usuario
      */
     public StreakResponse getStreak(Integer userId) {
-        List<LocalDate> activityDates = postRepository.findActivityDatesForUser(userId);
+        List<LocalDate> activityDates = mapActivityDays(postRepository.findActivityDaysForUser(userId))
+                .stream()
+                .map(ActivityDay::date)
+                .toList();
         if (activityDates.isEmpty()) {
             return new StreakResponse(0);
         }
@@ -224,48 +286,93 @@ public class PostService {
      * Constancia semanal del usuario a partir de su actividad en BD.
      *
      * @param userId id del usuario
-     * @return semanas consecutivas, dots L–D de la semana ISO actual y conteo
+     * @return semanas consecutivas, tags L–D de la semana ISO actual y conteo
      */
     public WeeklyConstancyResponse getWeeklyConstancy(Integer userId) {
-        return calculateWeeklyConstancy(postRepository.findActivityDatesForUser(userId));
+        return calculateWeeklyConstancy(mapActivityDays(postRepository.findActivityDaysForUser(userId)));
+    }
+
+    public static ActivityDay toActivityDay(Object dateValue, Object tagValue, Object postTypeValue) {
+        return new ActivityDay(toLocalDate(dateValue), resolveTrainingTag(tagValue, postTypeValue));
+    }
+
+    private static List<ActivityDay> mapActivityDays(List<Object[]> rows) {
+        if (rows == null || rows.isEmpty()) {
+            return List.of();
+        }
+        List<ActivityDay> days = new ArrayList<>(rows.size());
+        for (Object[] row : rows) {
+            days.add(toActivityDay(row[0], row[1], row[2]));
+        }
+        return days;
+    }
+
+    private static TrainingTag resolveTrainingTag(Object tagValue, Object postTypeValue) {
+        TrainingTag tag = null;
+        if (tagValue instanceof TrainingTag trainingTag) {
+            tag = trainingTag;
+        } else if (tagValue instanceof String s && !s.isBlank()) {
+            tag = TrainingTag.valueOf(s);
+        }
+        if (tag != null) {
+            return tag;
+        }
+        if ("RESULT".equals(String.valueOf(postTypeValue))) {
+            return TrainingTag.HYROX;
+        }
+        return TrainingTag.OTRO;
+    }
+
+    private static LocalDate toLocalDate(Object value) {
+        if (value instanceof LocalDate localDate) {
+            return localDate;
+        }
+        if (value instanceof Date sqlDate) {
+            return sqlDate.toLocalDate();
+        }
+        if (value instanceof java.util.Date utilDate) {
+            return new Date(utilDate.getTime()).toLocalDate();
+        }
+        throw new IllegalArgumentException("No se puede convertir a LocalDate: " + value);
     }
 
     /**
-     * Calcula constancia semanal a partir de fechas de actividad (días distintos con CHECKIN/RESULT).
+     * Calcula constancia semanal a partir de días de actividad (CHECKIN/RESULT).
      * <p>
      * Semanas ISO (L–D). Una semana cuenta si tiene ≥ {@code minDaysPerWeek} días distintos.
      * Si la semana actual aún no llega al mínimo, la racha se ancla en la anterior.
      *
-     * @param activityDates fechas distintas de actividad (cualquier orden)
-     * @return streakWeeks, weekActiveDays (L→D) y weekActiveCount
+     * @param activityDays días de actividad con tag (cualquier orden; ≤1 por fecha)
+     * @return streakWeeks, weekDayTags (L→D) y weekActiveCount
      */
-    public WeeklyConstancyResponse calculateWeeklyConstancy(List<LocalDate> activityDates) {
-        if (activityDates == null || activityDates.isEmpty()) {
-            return new WeeklyConstancyResponse(0, EMPTY_WEEK_DAYS, 0);
+    public WeeklyConstancyResponse calculateWeeklyConstancy(List<ActivityDay> activityDays) {
+        if (activityDays == null || activityDays.isEmpty()) {
+            return new WeeklyConstancyResponse(0, EMPTY_WEEK_TAGS, 0);
         }
 
         LocalDate today = LocalDate.now();
         IsoWeek currentWeek = IsoWeek.of(today);
 
         Map<IsoWeek, Set<LocalDate>> daysByWeek = new HashMap<>();
-        boolean[] weekActiveDays = new boolean[7];
+        TrainingTag[] weekDayTags = new TrainingTag[7];
 
-        for (LocalDate date : activityDates) {
+        for (ActivityDay day : activityDays) {
+            LocalDate date = day.date();
             IsoWeek week = IsoWeek.of(date);
             daysByWeek.computeIfAbsent(week, ignored -> new HashSet<>()).add(date);
 
             if (week.equals(currentWeek)) {
-                weekActiveDays[date.getDayOfWeek().getValue() - 1] = true;
+                weekDayTags[date.getDayOfWeek().getValue() - 1] = day.tag();
             }
         }
 
         int weekActiveCount = 0;
-        List<Boolean> weekActiveDaysList = new ArrayList<>(7);
-        for (boolean active : weekActiveDays) {
-            if (active) {
+        List<TrainingTag> weekDayTagsList = new ArrayList<>(7);
+        for (TrainingTag tag : weekDayTags) {
+            if (tag != null) {
                 weekActiveCount++;
             }
-            weekActiveDaysList.add(active);
+            weekDayTagsList.add(tag);
         }
 
         IsoWeek anchor = daysInWeek(daysByWeek, currentWeek) >= minDaysPerWeek
@@ -281,7 +388,7 @@ public class PostService {
 
         return new WeeklyConstancyResponse(
                 streakWeeks,
-                Collections.unmodifiableList(weekActiveDaysList),
+                Collections.unmodifiableList(weekDayTagsList),
                 weekActiveCount
         );
     }
